---
config:
  layout: elk

---
classDiagram
direction TB
    class Staff {
	    -no_staff
	    -name
	    -no_branch "อยู่สาขาไหนจ๊ะ"
	    +process_return(book,customer)
    }

    class TypeBook {
	    Manga
	    Novel
	    Historical
	    Education
	    Self_improvement
	    Economic
    }

    class Book {
	    -String book_name
	    -String book_series
	    -String book_uid
	    -String author
	    -String category
	    -Float price
	    -String activity_type "เช่า / ขาย"
	    -Int total_borrowed_count
	    -String book_status "Selected, Available, Incoming, Not Available"
	    -DateTime available_date
	    +check_availability()
	    +change_status()
	    +get_rate_info()
        +change_activity_type()
        +get_activity_type()
    }

    class BookInfo {
        -String name
        -BookStock book_stock
        -String author
        -TypeBook category
        -Float price
        -ActivityType activity_type
        -List~Book~ book
        -Date available_date
        -String id
        +add_copies(copies: int)
        +search_book_available()
        +search_book_incoming()
    }

    class Book {
        -BookInfo book_info
        -String book_uid
        -Int borrowed_count
        -BookStatus book_status
        -Date start_date
        -Date end_date
        -Date actual_return_date
        +calculate_end_date(how_many_days: int)
        +check_available()
        +check_incoming()
        +change_status(status: BookStatus)
        +change_activity_type(activity_type: ActivityType)
    }

    class BookStock {
        -String name
        -List~BookInfo~ forsale_book_list
        -List~BookInfo~ rent_book_list
        -List~BookInfo~ booking_book_list
        +get_book_list(activity_type: ActivityType)
        +add_book_info(book_info: BookInfo, activity_type: ActivityType)
        +remove_book(book)
        +search_book_available(bookname, activity_type)
    }

    class TimeSlot {
	    -Area area "เก็บว่ามาจากไหน"
	    -DateTime start_time
	    -DateTime end_time
	    -Bool is_available
	    +update_slot()
    }

    class Area {
	    -String area_id
	    -String area_type
	    -Float hourly_rate "ค่าบริการรายชั่วโมง"
	    -List feature[]
	    -Int capacity
	    -List slots[] "มีสล๊อตไหนบ้าง"
	    +list_timeslot()
	    +get_rate_info()
    }

    class QRCode {
	    -String gateway_reference
	    +process_payment()
    }

    class Cash {
	    +process_payment()
    }

    class Promotion {
	    -String promo_code
	    -Float discount_rate
	    -Bool is_active
        -String type_promotion
	    -List Used_User
	    +is_eligible()
	    +apply_discount()
    }
    class Transaction {
	    -Customer user "ผู้ทำรายการ"
	    -Staff staff "staff_obj"
	    -DateTime start_date_time "วันที่เริ่มรายการ"
	    -DateTime end_date_time "กำหนดการสิ้นสุด"
	    -String status "Requested, Confirmed, In Use, Completed, Cancelled"
	    -Payment payment "เอาทั้งobjectPaymentมาใส่เลย"
	    -List audit_logs_list[] "บันทึกการแก้ไขข้อมูลในรายการนี้"
	    +update_status()
	    +add_audit_log() "Log of Transaction"
	    +sync_payment_with_activity() "ดึงค่าปรับจาก RentBook มาใส่ Payment"
    }

    class BookingArea {
        -List reserved_slots[]
        +calculate_total_price()
        +request_upgrade() "request กลับระบบไป search area"
        +calculate_upgrade_delta()
        +update_reserved_slots()
    }

    class BookingBook {
        -List book_list[]
        -DateTime reservation_date "วันที่จองหนังสือ"
        -DateTime pickup_deadline"เวลาสุดท้ายที่ต้องมารับหนังสือ"
        +check_pickup_deadline()
        +calculate_total_books()
    }

    class RentBook {
        -DateTime rental_date "วันที่เช่าตามกำหนด"
        -DateTime due_date "วันที่ต้องคืนตามกำหนด"
        -DateTime actual_return_date"วันที่คืนจริง"
        -Float late_penalty_rate"อัตราค่าปรับต่อวันของหนังสือเล่มนั้น"
        +calculate_late_penalty()
    }

    class Purchase {
        -List purchase_items[]
        +calculate_subtotal()
    }

    class Payment {
        -String payment_no "เลขสลีปปื้ง"
        -String status"Unpaid, Paid, Voided"
        -List order "เก็บก้อน BookingCafe/BookingBook/RentBook/Purchase"
        -DateTime timestamp
        -String payment_method
        
        -base_fee"ค่าบริการหลัก"
        -upgrade_delta"ยอดส่วนต่างจากการอัปเกรด"
        -discount_amount"ยอดส่วนลด"
        -penalty_fee"ค่าปรับทั้งหมด"
        -net_amount"ยอดสุทธิที่ต้องจ่าย"
        +calculate_net_amount()
        +update_payment_status()
        +add_penalty_fee()
    }

    class PaymentMethod {
        +process_payment()
    }

    class Manager {
        +print_report()
    }

    class BiblioHubSystem {
        -List staff_list[]
        -List promotion_list[]
        -List book_stock[]
        -List area[]
        -List customer_list[]
        -List transaction_list[]
        -List notification_list[]
        +register()
        +delete_member()
        +check_duplicate_account()
        +validate_input_data()

        +get_user_from_phone_number()
        +search_book()
        +search_area()
        +validate_booking_conflict()
        +checkout()
        +create_transaction()
        +verify_permission()
        +add_book_stock()
        +add_staff()
        +add_promotion()
        +add_area()
        +remove_area()
        +add_strike()
        +remove_strike()
        +notify_user()
        +upgrade_booking_area()"อัพเกรดarea"
        +generate_utilization_report()
        ++should_notify()
        +process_notifications()
    }

    class Notification {
        -String message
        -Customer target_user
        -String notification_id
        +send_message() "send_expiry_alert(transaction, lead_time) "
    }

    class Customer {
        -String name
        -String surname
        -Int phonenumber
        -String email
        -List transaction[]
        -List notification_list[]
        -DateTime booking_reservation_time "แต่ละระดับจะมีค่าไม่เท่ากัน"
        -Int rental_quota "แต่ละระดับจะมีค่าไม่เท่ากัน"
        -Int strike "จำนวนการเตือน"
        -List select[] "เลือกอะไรจากร้านบ้าง"
        +check_eligibility() "เช็คสิทธิ์ในการทำรายการ : มีหนี้ หรือ ประวัติไม่ดี"
        +check_quota()
        +select() "ไปเอา return มาจากระบบตอน search"
        +unselect()
        +add_notify()
        +add_transaction()
    }

    class Member {
        -String level_member
        -Int birth_month
        -Int points
        -Int booking_book_quota "ต่างกันในแต่ละรดับ"
        -DateTime expiration_date
        +add_point()
    }
    class UpgradeArea {
        -BookingArea old_booking "รายการจองเดิม"
        -List~TimeSlot~ new_slots "สล็อตเวลาใหม่ (อ้างอิง Area ได้จากในนี้)"
        -Float upgrade_delta "ยอดเงินส่วนต่าง"
        +calculate_delta() "คำนวณส่วนต่างราคา"
        +apply_upgrade() "อัปเดตคืนสล็อตเก่า และยึดสล็อตใหม่"
        +validate_upgrade_rules()"ตรวจสอบว่าสามารถอัพเกรดได้ไหม"
    }
Purchase <|-- UpgradeArea
UpgradeArea "1" --> "1" BookingArea : old_booking
UpgradeArea "1" o-- "1..*" TimeSlot : new_slots

<<abstract>> PaymentMethod

    BiblioHubSystem "0..*" <-- "1" BookingArea
    BiblioHubSystem "1" o-- "1..*" Staff
    BiblioHubSystem "1" o-- "1..*" Area
    BiblioHubSystem "1" o-- "0..*" Customer
    BiblioHubSystem "1" o-- "0..*" Transaction
    BiblioHubSystem "1" o-- "0..*" Promotion
    BiblioHubSystem "1" o-- "1..*" BookStock
    BiblioHubSystem "1" o-- "0..*" Notification

    Customer <|-- Member
    Member <|-- Staff
    Staff <|-- Manager
    
    Purchase <|-- RentBook
    Purchase <|-- BookingBook
    Purchase <|-- BookingArea

    Transaction "1" --> "1" Staff

    Payment "1" <-- "1" Transaction
    BookingArea "1" o-- "1..*" TimeSlot
    
    BookingBook "1" --> "0..*" Book
    RentBook "1" --> "0..*" Book
    Purchase "1" --> "0..*" Book
 
    Purchase "0.." --o "1" Payment
    
    Transaction "0..*" <--> "1" Customer
    Book --> TypeBook
    BookInfo "1" *-- "0..*" Book
    BookStock "1" o-- "0..*" BookInfo
    Area "1" o-- "0..*" TimeSlot
    Payment --> PaymentMethod

    QRCode --|> PaymentMethod
    Cash --|> PaymentMethod

    Notification "0..*" --o "1" Customer
